--- a/schliffs/fischer/C12-7.yaml
+++ b/schliffs/fischer/C12-7.yaml
@@ -1,5 +1,5 @@
 name: C12-7
-description: мелкозернистый снег на t от 0 до −10
+description: мелкозернистый снег на t от 0 до -10
 website_url: ""
 
 snow_type:
