--- a/schliffs/fischer/P1-1.yaml
+++ b/schliffs/fischer/P1-1.yaml
@@ -1,5 +1,5 @@
 name: P1-1
-description: температура +3 до −5, свежий снег
+description: температура +3 до -5, свежий снег
 website_url: ""
 
 snow_type:
