--- a/schliffs/fischer/P10-3.yaml
+++ b/schliffs/fischer/P10-3.yaml
@@ -1,5 +1,5 @@
 name: P10-3
-description: падающий, свежий снег, t от 0 до −5
+description: падающий, свежий снег, t от 0 до -5
 website_url: ""
 
 snow_type:
