--- a/schliffs/fischer/P22-6.yaml
+++ b/schliffs/fischer/P22-6.yaml
@@ -1,5 +1,5 @@
 name: P22-6
-description: переходная структура на любой тип снега, температура от +5 до −5
+description: переходная структура на любой тип снега, температура от +5 до -5
 website_url: ""
 
 snow_type:
