--- a/schliffs/fischer/С3-1.yaml
+++ b/schliffs/fischer/С3-1.yaml
@@ -1,5 +1,5 @@
 name: С3-1
-description: для искусственного снега, температура ниже −5
+description: для искусственного снега, температура ниже -5
 website_url: ""
 
 snow_type:
