--- a/schliffs/fischer/С8-1.yaml
+++ b/schliffs/fischer/С8-1.yaml
@@ -1,5 +1,5 @@
 name: С8-1
-description: более узкая структура для искусственного снега от 0 до −10
+description: более узкая структура для искусственного снега от 0 до -10
 website_url: ""
 
 snow_type:
