--- a/schliffs/ramsau/S11-3.yaml
+++ b/schliffs/ramsau/S11-3.yaml
@@ -1,5 +1,5 @@
 name: S11-3
-description: структура под искусственный снег, t −10 −20
+description: структура под искусственный снег, температура от -20 до -10
 website_url: ""
 
 snow_type:
