--- a/schliffs/ramsau/S12-1.yaml
+++ b/schliffs/ramsau/S12-1.yaml
@@ -1,5 +1,5 @@
 name: S12-1
-description: свежий натуральный и искусственный снег t 0 −15
+description: свежий натуральный и искусственный снег, температура от -15 до 0
 website_url: ""
 
 snow_type:
