--- a/schliffs/ramsau/S12-14.yaml
+++ b/schliffs/ramsau/S12-14.yaml
@@ -1,5 +1,5 @@
 name: S12-14
-description: на перемороженный снег в период потепления, свежий снег, t −2 −10
+description: на перемороженный снег в период потепления, свежий снег, t -2 -10
 website_url: ""
 
 snow_type:
