--- a/schliffs/ramsau/S12-6.yaml
+++ b/schliffs/ramsau/S12-6.yaml
@@ -1,5 +1,5 @@
 name: S12-6
-description: свежий падающий мокрый снег t 0 −5
+description: свежий падающий мокрый снег t 0 -5
 website_url: ""
 
 snow_type:
