--- a/schliffs/fischer/P5-1.yaml
+++ b/schliffs/fischer/P5-1.yaml
@@ -1,5 +1,5 @@
 name: P5-1
-description: универсальная структура на температуру от +5 до −10, любой тип снега
+description: универсальная структура на температуру от +5 до -10, любой тип снега
 website_url: ""
 
 snow_type:
@@ -18,11 +18,11 @@ tags:
   - широкий диапазон
 
 similars:
-  - P11-2
-  - P22-6
+  -
+  -
 
 features:
-  - ""
+  - стандартная
 
 updated_at: 2024-04-01
 updated_by: ""
