--- a/schliffs/fischer/С1-1.yaml
+++ b/schliffs/fischer/С1-1.yaml
@@ -1,5 +1,5 @@
 name: С1-1
-description: все типы снега, включая свежий, температура ниже −5
+description: все типы снега, включая свежий, температура ниже -5
 website_url: ""
 
 snow_type:
