--- a/schliffs/ramsau/S12-2-07.yaml
+++ b/schliffs/ramsau/S12-2-07.yaml
@@ -1,5 +1,5 @@
 name: S12-2-07
-description: для свежего снега и мягкой лыжни 0 −10
+description: для свежего снега и мягкой лыжни 0 -10
 website_url: ""
 
 snow_type:
