--- a/schliffs/salomon/SL32.yaml
+++ b/schliffs/salomon/SL32.yaml
@@ -1,6 +1,6 @@
 name: SL32
 description: from humid natural to wet and very wet old and dirty snow, from medium to soft conditions
-description_ru: от влажного до мокрого и очень мокрого старого и грязного снега при средней и мягкой жесткости трассы
+description_ru: структура для влажного и очень мокрого старого снега, а также для грязного снега при средней и мягкой жесткости трассы
 
 website_url: ""
 
@@ -10,7 +10,7 @@ snow_type:
   - dirty
 snow_temperature:
   - min: 0
-  - max: +10
+  - max: +15
 condition: yellow
 manufactory: "Salomon"
 house: "Salomon"
