Добавлены структуры skipole

--- a/schliffs/beme/B2211.yaml
+++ b/schliffs/beme/B2211.yaml
@@ -1,5 +1,6 @@
 name: B2211
-description: универсальная структура на все типы снега, особенно на свеже выпавший снег
+description:
+description_ru: универсальная структура на все типы снега, особенно на свеже выпавший снег
 website_url: "https://www.bemesports.com/en/skiservice"
 
 snow_type:
