--- a/schliffs/fischer/P1-1.yaml
+++ b/schliffs/fischer/P1-1.yaml
@@ -1,5 +1,6 @@
 name: P1-1
-description: температура +3 до -5, свежий снег
+description:
+description_ru: структура для свежего снега при температуре +3 до -5
 website_url: ""
 
 snow_type:
