--- a/schliffs/fischer/P11-1.yaml
+++ b/schliffs/fischer/P11-1.yaml
@@ -1,5 +1,6 @@
 name: P11-1
-description: чуть холоднее чем P11-2
+description:
+description_ru: чуть холоднее чем P11-2
 website_url: ""
 
 snow_type:
