--- a/schliffs/fischer/P5-1.yaml
+++ b/schliffs/fischer/P5-1.yaml
@@ -1,5 +1,6 @@
 name: P5-1
-description: универсальная структура на температуру от +5 до -10, любой тип снега
+description:
+description_ru: универсальная структура для любого типа снега на температуру от +5 до -10
 website_url: ""
 
 snow_type:
