--- a/schliffs/fischer/Р3-1.yaml
+++ b/schliffs/fischer/Р3-1.yaml
@@ -1,5 +1,6 @@
 name: Р3-1
-description: структура на свежий влажный снег, на 0 градусов с переходом в плюсовую
+description:
+description_ru: структура на свежий влажный снег, на 0 градусов с переходом в плюсовую
 website_url: ""
 
 snow_type:
