--- a/schliffs/fischer/Р5-9.yaml
+++ b/schliffs/fischer/Р5-9.yaml
@@ -1,5 +1,6 @@
 name: Р5-9
-description: структура для классических лыж на старый мокрый снег, температура от 0 и выше
+description:
+description_ru: структура для классических лыж на старый мокрый снег, температура от 0 и выше
 website_url: ""
 
 snow_type:
