--- a/schliffs/madshus/M61В.yaml
+++ b/schliffs/madshus/M61В.yaml
@@ -1,5 +1,6 @@
 name: M61B
-description: универсальная структура для различных видов снега, в том числе и нового,  при температуре воздуха от +3/ -3. Оптимальна, когда снег становится немного влажным.
+description:
+description_ru: универсальная структура для различных видов снега, в том числе и нового,  при температуре воздуха от +3 до -3
 website_url: https://www.skisport.ru/forum/commercial-offers-of-partners/104563/
 
 snow_type:
@@ -24,7 +25,8 @@ similars:
   - SV100
 
 features:
-  -  Хорошо подходит для классических лыж ZERO
+  - оптимальна, когда снег становится немного влажным
+  - хорошо подходит для классических лыж ZERO
 
 updated_at: 2024-04-01
 updated_by: https://github.com/klinkin
