--- a/schliffs/ramsau/S11-2.yaml
+++ b/schliffs/ramsau/S11-2.yaml
@@ -1,5 +1,6 @@
 name: S11-2
-description: структура для холодного сухого натурального снега, температура от -10 до -20
+description:
+description_ru: структура для холодного сухого натурального снега, температура от -10 до -20
 website_url: ""
 
 snow_type:
