--- a/schliffs/ramsau/S12-16.yaml
+++ b/schliffs/ramsau/S12-16.yaml
@@ -1,5 +1,6 @@
 name: S12-16
-description: структура для высокой влажности и свежего снега, подходит под глянец, температура от 0 до -10
+description:
+description_ru: универсальная структура для высокой влажности и свежего снега, подходит под глянец, температура от 0 до -10
 website_url: ""
 
 snow_type:
