--- a/schliffs/ramsau/S13-4.yaml
+++ b/schliffs/ramsau/S13-4.yaml
@@ -1,5 +1,7 @@
 name: S13-4
-description: влажный снег, натуральный и искусственный, переменчивая погода, большой диапазон
+description:
+description_ru: влажный снег, натуральный и искусственный, переменчивая погода, большой диапазон
+
 website_url: ""
 
 snow_type:
