--- a/schliffs/ramsau/S13-5-08.yaml
+++ b/schliffs/ramsau/S13-5-08.yaml
@@ -1,5 +1,6 @@
 name: S13-5-08
-description: влажный мелкозернистый свежий снег
+description:
+description_ru: влажный мелкозернистый свежий снег
 website_url: ""
 
 snow_type:
