--- a/schliffs/ramsau/S13-5.yaml
+++ b/schliffs/ramsau/S13-5.yaml
@@ -1,5 +1,6 @@
 name: S13-5
-description: свежий падающий мокрый снег, температура от 0 до +5
+description:
+description_ru: свежий падающий мокрый снег, температура от 0 до +5
 website_url: ""
 
 snow_type:
