--- a/schliffs/beme/B3312.yaml
+++ b/schliffs/beme/B3312.yaml
@@ -1,5 +1,6 @@
 name: B3312
-description: струтура на переходку и тепло, на влажный, но не жидкий снег
+description:
+description_ru: струтура на переходку и тепло, на влажный, но не жидкий снег
 website_url: "https://www.bemesports.com/en/skiservice"
 
 snow_type:
