--- a/schliffs/fischer/P11-2.yaml
+++ b/schliffs/fischer/P11-2.yaml
@@ -1,5 +1,6 @@
 name: P11-2
-description: все типы снега от +2 до -8
+description:
+description_ru: все типы снега при температуре от +2 до -8
 website_url: ""
 
 snow_type:
