--- a/schliffs/madshus/M61F.yaml
+++ b/schliffs/madshus/M61F.yaml
@@ -1,5 +1,6 @@
 name: M61F
-description: структура для нового и трансформированного сухого снега при температуре воздуха от -2 до -14, температуре снега -3 и холоднее.
+description:
+description_ru: структура для нового и трансформированного сухого снега при температуре от -3 и холоднее
 website_url: https://www.skisport.ru/forum/commercial-offers-of-partners/104563/
 
 snow_type:
