--- a/schliffs/marsport/M100.yaml
+++ b/schliffs/marsport/M100.yaml
@@ -1,5 +1,6 @@
 name: M100
-description: структура для высокой влажности и свежего снега, подходит под глянец, температура от 0 до -10
+description:
+description_ru: структура для высокой влажности и свежего снега, подходит под глянец, температура от 0 до -10
 website_url: https://marsport.ru/service/
 
 snow_type:
@@ -22,6 +23,8 @@ similars:
   - P5-1
   - S12-16
   - B2211
+  - SV77
+  - X25
 
 features:
   - ""
