--- a/schliffs/ramsau/S11-3.yaml
+++ b/schliffs/ramsau/S11-3.yaml
@@ -1,8 +1,11 @@
 name: S11-3
-description: структура под искусственный снег, температура от -20 до -10
+description:
+description_ru: структура под натуральный и искусственный перемороженный снег, температура от -10 до -20
 website_url: ""
 
 snow_type:
+  - frozen
+  - natural
   - artificial
 snow_temperature:
   - min: -20
@@ -14,13 +17,12 @@ author: ""
 country: "Germany"
 
 tags:
+  - перемороженый
   - искусственный снег
   - холодный
 
 similars:
-  - S11-1
-  - S11-2
-  - S12-7
+  - B227
 
 features:
   - ""
