--- a/schliffs/ramsau/S12-1.yaml
+++ b/schliffs/ramsau/S12-1.yaml
@@ -1,5 +1,6 @@
 name: S12-1
-description: свежий натуральный и искусственный снег, температура от -15 до 0
+description:
+description_ru: свежий натуральный и искусственный снег, температура от -15 до 0
 website_url: ""
 
 snow_type:
