--- a/schliffs/ramsau/S13-6.yaml
+++ b/schliffs/ramsau/S13-6.yaml
@@ -1,5 +1,6 @@
 name: S13-6
-description: мокрый снег с дождем, температура от 0 до +10
+description:
+description_ru: мокрый снег с дождем, температура от 0 до +10
 website_url: ""
 
 snow_type:
