--- a/schliffs/ramsau/T4.yaml
+++ b/schliffs/ramsau/T4.yaml
@@ -1,30 +1,31 @@
-name: S11-1
+name: T4
 description:
-description_ru: сухой снег на температуре от -10 до -20
+description_ru: стуктура для морозного снега и температуры ниже -5
+
 website_url: ""
 
 snow_type:
+  - frozen
   - dry
+
 snow_temperature:
   - min: -20
-  - max: -10
-condition: ""
+  - max: -5
+condition: green
 manufactory: "Fischer"
 house: "Ramsau"
 author: ""
 country: "Germany"
 
 tags:
-  - сухой снег
-  - холодный
+  -
 
 similars:
-  - S11-2
-  - S11-3
+  - B227
 
 features:
   - ""
 
-updated_at: 2024-04-01
+updated_at: 2024-04-04
 updated_by: ""
 archived: false
