PL1 (-5 и холоднее) — шлифт зарекомендовал себя на средний холод и мороз, особенно в прошлом сезоне с периодически сильными морозами. Шел уже на ровне с классикой на эту погоду S12-4 S11-3 и B227.
PL2 (0 -10) — универсальный шлифт, особенностью будет то, что может сработать и в конце сезона при образовании снежных гранул.

R2 (-5 -15) — средний холод, создавался под ЧМ по биатлону в Антхольце.

V1 (-5 и холоднее) — также морозная структура, хорошо смотрится на натуральном снегу.

T1 (-5 0+) — переходка и вода, структурами на тепло обычно пренебрегают большинство спортсменов, считая, что ради пары дней или стартов их не стоит брать. Но большинство марафон проходит во второй половине сезона, когда подобные структуры необходимы и наиболее востребованы. Шлифт хорошо работает также на гранулированном снегу, его работа мне отдельно понравилась и смело оставляю его в своем стойле вместе с S13-5.

T4 (-5 и холоднее) — морозный шлифт, который можно приобрести в дополнение к основным парам на этот диапазон.

OH3 (+5 -7) — переходка и тепло, появился шлифт относительно недавно, сильно позднее выше перечисленных шлифтов.

--- a/schliffs/ramsau/OH3.yaml
+++ b/schliffs/ramsau/OH3.yaml
@@ -1,13 +1,14 @@
 name: OH3
 description:
-description_ru: ""
-website_url: ""
+description_ru: структура на переходку и тепло при температуре от +5 до -7
+
+website_url:  https://vk.com/video-220482174_456239484
 
 snow_type:
   - all
 snow_temperature:
-  - min: null
-  - max: null
+  - min: -7
+  - max: +5
 condition: ""
 manufactory: "Fischer"
 house: "Ramsau"
@@ -15,13 +16,13 @@ author: ""
 country: "Germany"
 
 tags:
-  - ramsau
+  -
 
 similars:
-  - ""
+  - B3312
 
 features:
-  - ""
+  - появился шлифт относительно недавно, сильно позднее S-шлифтов
 
 updated_at: 2024-04-04
 updated_by: ""
