--- a/schliffs/ramsau/T4.yaml
+++ b/schliffs/ramsau/T4.yaml
@@ -2,7 +2,7 @@ name: T4
 description:
 description_ru: стуктура для морозного снега и температуры ниже -5
 
-website_url: ""
+website_url: https://vk.com/video-220482174_456239484
 
 snow_type:
   - frozen
