--- a/schliffs/ramsau/Pl1.yaml
+++ b/schliffs/ramsau/Pl1.yaml
@@ -1,10 +1,13 @@
-name: Pl1
+name: PL1
 description:
-description_ru:
-website_url: ""
+description_ru: структура на средний холод и мороз при температуре -5 и холоднее
+
+website_url: https://vk.com/video-220482174_456239484
 
 snow_type:
   - all
+  - frozen
+
 snow_temperature:
   - min: null
   - max: null
@@ -15,10 +18,12 @@ author: ""
 country: "Germany"
 
 tags:
-  - ramsau
+  -
 
 similars:
-  - Pl2
+  - S12-4
+  - S11-3
+  - B227
 
 features:
   - ""
