--- a/schliffs/ramsau/Pl2.yaml
+++ b/schliffs/ramsau/Pl2.yaml
@@ -1,10 +1,14 @@
-name: Pl2
+name: PL2
 description:
-description_ru:
-website_url: ""
+description_ru: универсальный шлифт как для свежего снега так и для трансформированого при температуре от 0 до -10
+
+website_url: https://vk.com/video-220482174_456239484
 
 snow_type:
   - all
+  - fresh
+  - transformed
+
 snow_temperature:
   - min: null
   - max: null
@@ -15,10 +19,11 @@ author: ""
 country: "Germany"
 
 tags:
-  - ramsau
+  -
 
 similars:
-  - Pl1
+  - S12-16
+  - B2211
 
 features:
   - ""
