--- a/schliffs/ramsau/R2.yaml
+++ b/schliffs/ramsau/R2.yaml
@@ -1,13 +1,16 @@
 name: R2
 description:
-description_ru:
-website_url: ""
+description_ru: структура на средний холод при температуре от -5 до -15
+
+website_url: https://vk.com/video-220482174_456239484
 
 snow_type:
   - all
+  - frozen
+
 snow_temperature:
-  - min: null
-  - max: null
+  - min: -15
+  - max: -5
 condition: ""
 manufactory: "Fischer"
 house: "Ramsau"
@@ -21,7 +24,7 @@ similars:
   - ""
 
 features:
-  - ""
+  - создавалась под ЧМ по биатлону в Антхольце
 
 updated_at: 2024-04-04
 updated_by: ""
