--- a/schliffs/ramsau/T1.yaml
+++ b/schliffs/ramsau/T1.yaml
@@ -2,7 +2,7 @@ name: T1
 description:
 description_ru: стуктура для крупнозернистого снега, весеннего старого снега и температуры от 0 до +5
 
-website_url:
+website_url: https://vk.com/video-220482174_456239484
 
 snow_type:
   - old
