--- a/schliffs/ekiptime/sv77.yaml
+++ b/schliffs/ekiptime/sv77.yaml
@@ -1,25 +1,28 @@
 name: SV77
 description:
-description_ru:
+description_ru: универсальная структура на средний холод и низкой влажности при температуре от -0 до -20
 
 website_url: https://ekiptime.ru/services/base_tuning.php
 
 snow_type:
-  -
-  -
-  -
+  - cold
+  - dry
+  - old
+  - fresh
 snow_temperature:
-  - min:
-  - max:
-condition:
+  - min: -20
+  - max: -0
+condition: blue
 manufactory: ""
 house: "ekiptime"
 author: "Artur"
 country: "Russia"
 
 tags:
-  -
-  -
+  - холодный
+  - сухой
+  - свежий
+  - старый
 
 similars:
   -
