--- a/schliffs/fischer/TZ1-1.yaml
+++ b/schliffs/fischer/TZ1-1.yaml
@@ -1,7 +1,7 @@
 name: TZ1-1
 description:
 description_ru: на свежий снег при температуре ниже 0
-website_url: ""
+website_url:
 
 snow_type:
   - fresh
