--- a/schliffs/fischer/Р3-2.yaml
+++ b/schliffs/fischer/Р3-2.yaml
@@ -1,7 +1,7 @@
 name: Р3-2
 description:
 description_ru: на старый мокрый снег при t 0 с переходом в плюс
-website_url: ""
+website_url:
 
 snow_type:
   - old
