--- a/schliffs/fischer/С12-1.yaml
+++ b/schliffs/fischer/С12-1.yaml
@@ -1,7 +1,7 @@
 name: С12-1
 description:
 description_ru: любой тип снега, температура от -15 до -5
-website_url: ""
+website_url:
 
 snow_type:
   - all
