--- a/schliffs/ramsau/S12-16.yaml
+++ b/schliffs/ramsau/S12-16.yaml
@@ -1,7 +1,7 @@
 name: S12-16
 description:
 description_ru: универсальная структура для высокой влажности и свежего снега, подходит под глянец, температура от 0 до -10
-website_url: ""
+website_url:
 
 snow_type:
   - fresh
