--- a/schliffs/ramsau/S12-2.yaml
+++ b/schliffs/ramsau/S12-2.yaml
@@ -1,7 +1,7 @@
 name: S12-2
 description:
 description_ru: свежий мокрый снег, температура от -5 до 0
-website_url: ""
+website_url:
 
 snow_type:
   - fresh
