--- a/schliffs/beme/B3312.yaml
+++ b/schliffs/beme/B3312.yaml
@@ -1,7 +1,8 @@
 name: B3312
 description:
 description_ru: струтура на переходку и тепло, на влажный, но не жидкий снег
-website_url: "https://www.bemesports.com/en/skiservice"
+
+website_url: https://www.bemesports.com/en/skiservice
 
 snow_type:
   - wet
