--- a/schliffs/fischer/P10-1.yaml
+++ b/schliffs/fischer/P10-1.yaml
@@ -2,7 +2,7 @@ name: P10-1
 description:
 description_ru: для сухого снега при температуре ниже 0
 
-website_url: ""
+website_url:
 
 snow_type:
   - dry
