--- a/schliffs/fischer/P10-3.yaml
+++ b/schliffs/fischer/P10-3.yaml
@@ -2,7 +2,7 @@ name: P10-3
 description:
 description_ru: структура для падающего свежего снега, температура от 0 до -5
 
-website_url: ""
+website_url:
 
 snow_type:
   - fresh
