--- a/schliffs/fischer/P11-2.yaml
+++ b/schliffs/fischer/P11-2.yaml
@@ -1,7 +1,7 @@
 name: P11-2
 description:
 description_ru: все типы снега при температуре от +2 до -8
-website_url: ""
+website_url:
 
 snow_type:
   - all
