--- a/schliffs/fischer/С3-1.yaml
+++ b/schliffs/fischer/С3-1.yaml
@@ -1,7 +1,7 @@
 name: С3-1
 description:
 description_ru: для искусственного снега, температура ниже -5
-website_url: ""
+website_url:
 
 snow_type:
   - artificial
