--- a/schliffs/ramsau/S11-1.yaml
+++ b/schliffs/ramsau/S11-1.yaml
@@ -1,7 +1,7 @@
 name: S11-1
 description:
 description_ru: сухой снег на температуре от -10 до -20
-website_url: ""
+website_url:
 
 snow_type:
   - dry
