--- a/schliffs/ramsau/S12-14.yaml
+++ b/schliffs/ramsau/S12-14.yaml
@@ -1,7 +1,7 @@
 name: S12-14
 description:
 description_ru: на перемороженный снег в период потепления, свежий снег, температура от -2 до -10
-website_url: ""
+website_url:
 
 snow_type:
   - frozen
