--- a/schliffs/ramsau/S12-7.yaml
+++ b/schliffs/ramsau/S12-7.yaml
@@ -1,7 +1,7 @@
 name: S12-7
 description:
 description_ru: искусственный снег, температура от -2 до -12
-website_url: ""
+website_url:
 
 snow_type:
   - artificial
