--- a/schliffs/skipole/_meta.yaml
+++ b/schliffs/skipole/_meta.yaml
@@ -1,12 +1,17 @@
-name: "Skipole"
+name: Skipole
 description: "Структуры для беговых лыж от компании Skipole"
 description_ru: "Структуры для беговых лыж от компании Skipole"
-description_en: "Cross-country ski structures from Skipole"
-website_url: "https://www.skipole.com"
-country: "Europe"
+
+website_url: https://skipole.ru/shtainshlift-romashkovo/
+country: Russia
+
 logo: ""
+
 contact:
-  email: ""
-  phone: ""
-  address: ""
+  email:
+  phone:
+    - tel:+79261489013
+    - tel:+79032181881
+  address: Москва, село Ромашково ул.Советская, д.113
+
 updated_at: 2024-04-04
