--- a/schliffs/salomon/_meta.yaml
+++ b/schliffs/salomon/_meta.yaml
@@ -1,10 +1,12 @@
-name: "Salomon"
-description: "Структуры для беговых лыж от компании Salomon"
-description_ru: "Структуры для беговых лыж от компании Salomon"
-description_en: "Cross-country ski structures from Salomon"
-website_url: "https://www.salomon.com"
-country: "France"
+name: Salomon
+description: Default Salomon structures
+description_ru: Стандартные структуры для беговых лыж от компании Salomon
+
+website_url: https://www.salomon.com
+country: Austria
+
 logo: ""
+
 contact:
   email: ""
   phone: ""
