--- a/schliffs/skipole/_meta.yaml
+++ b/schliffs/skipole/_meta.yaml
@@ -1,11 +1,11 @@
 name: Skipole
-description: "Структуры для беговых лыж от компании Skipole"
-description_ru: "Структуры для беговых лыж от компании Skipole"
+description:
+description_ru: Кастомные структуры от Федора Николаева
 
-website_url: https://skipole.ru/shtainshlift-romashkovo/
+website_url: https://skipole.ru/shtainshlift-romashkovo
 country: Russia
 
-logo: ""
+logo:
 
 contact:
   email:
